# rust_fun

./: Cargo.toml  README.md
.fun/: test
src/: main.rs
