[package]
name = "fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
clap_complete = "4.4.6"
dotenv = "0.15.0"
is_executable = "1.0.1"
thiserror = "1.0.56"
